# jobspy-plugin

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  README.md  flake.nix  pyproject.toml
skills/jobspy/: SKILL.md  cli.py  post_install.py  post_uninstall.py  search.py  tracker.py
tests/: test_jobspy_skill.py  test_search_defaults.py
