[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobspy-plugin"
version = "0.1.0"
description = "Job search and application tracking helpers for OpenClaw"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpenClaw Maintainers" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Topic :: Utilities",
]
dependencies = [
  "pandas",
  "python-jobspy",
]

[project.scripts]
jobspy = "skills.jobspy.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"skills.jobspy" = ["SKILL.md"]

[tool.setuptools.packages.find]
include = ["skills*"]
