[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobspy-plugin"
version = "0.1.0"
description = "Job search and application tracking helpers for OpenClaw"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpenClaw Maintainers" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Topic :: Utilities",
]
dependencies = [
  "pandas",
  "python-jobspy @ git+https://github.com/dmille56/JobSpy@1f0530ac5ea0adf3953d9564c4af6a064c866cce",
]

[project.scripts]
jobspy = "skills.jobspy.cli:main"
jobspy-post-install = "skills.jobspy.post_install:main"
jobspy-post-uninstall = "skills.jobspy.post_uninstall:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"skills.jobspy" = ["SKILL.md"]

[tool.setuptools.packages.find]
include = ["skills*"]
